--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,10 +6,10 @@
                 <a class="item" href="/archive.html">
                     Latest Posts
                 </a>
-                <a class="item" href="https://twitter.com/fsf">
+                <a class="item" href="https://twitter.com/yahto1307">
                     Twitter
                 </a>
-                <a class="item" href="https://github.com/abhn">
+                <a class="item" href="https://github.com/yahto1307">
                     Github
                 </a>
             </div>
