--- a/_includes/header.html
+++ b/_includes/header.html
@@ -33,7 +33,7 @@
                         <a class="item" href="http://stallman.org/facebook.html">
                             <i class="facebook link icon"></i>
                         </a>
-                        <a class="item" href="https://github.com/abhn">
+                        <a class="item" href="https://github.com/yahto1307">
                             <i class="github link icon"></i>
                         </a>
                         <a class="item" href="/feed.xml">Subscribe</a>
