add: change what happened

--- a/_includes/author.html
+++ b/_includes/author.html
@@ -8,7 +8,7 @@
             <div class="content">
                 <a class="header">Abhishek Nagekar</a>
                 <div class="description">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>secret has a cost, its never free</p>
                 </div>
             </div>
         </div>
