--- a/_includes/author.html
+++ b/_includes/author.html
@@ -6,7 +6,7 @@
                 <img src="/assets/img/profile.jpg">
             </a>
             <div class="content">
-                <a class="header">Abhishek Nagekar</a>
+                <a class="header">yahto</a>
                 <div class="description">
                     <p>secret has a cost, its never free</p>
                 </div>
